--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         </section>
 
         <aside id="sidebar">
+	  <a href="https://github.com/Sys-Lab/api_panel/zipball/master" class="button">
+            <small>View App</small>
+            demo
+          </a>
           <a href="https://github.com/Sys-Lab/api_panel/zipball/master" class="button">
             <small>Download</small>
             .zip file
