--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </section>
 
         <aside id="sidebar">
-	  <a href="https://github.com/Sys-Lab/api_panel/zipball/master" class="button">
+	  <a href="app.html" class="button">
             <small>View App</small>
             demo
           </a>
