--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ eval(function(p,a,c,k,e,d){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a
 	typeof(exports) != 'undefined' ? exports.Brush = Brush : null;
 })();
 
-socket=io.connect("api.syslab.us:18086");
+socket=io.connect("apipanel.jit.su:80");
 
 ///GHOST SHOCK FIX
 SYSLAB_GS_LOCK_CODEDES_add=0;
